syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "BikeShop.Protos";

package bike;

// The service definition.
service Bikes {
  rpc GetBikes (google.protobuf.Empty) returns (GetBikesResponse); 
}

message GetBikesResponse {
  repeated EntityMongoBike bikeEntities = 1;
}

message EntityBikeOption{
    string Name=1;
    string Description=2;
    int32 Price=3;
}

message EntityBike{
        string Brand=1;
        string Model=2;
        int32 Price=3;
        int32 BasePrice=4;
        bool isStandard=5;
        string Description=6;
        repeated EntityBikeOption SelectedOptions =7;
}

message EntityMongoBike {
        string Id=1;
        int32 TotalPrice=2;
        bool IsStandard=3;
        repeated EntityBikeOption SelectedOptions=4;
        EntityBike Bike =5;
}
